--- a/attack11.html
+++ b/attack11.html
@@ -29,7 +29,7 @@
             </h4>
              </h4>
              <h4 >
-                 <a href="#" style="color:#45a29e;text-decoration: none;";
+                 <a href="#" style="color:black;text-decoration: none;";
                 >Women</a>
              </h4>
              <h4 >
@@ -73,7 +73,7 @@
     <!-- change -->
             <h1>11 Attack</h1>
             <p><i><h3>Men's Shoes</h3></i></p> <br>
-            <h2 style = "color :#757575";> MRP : ₹ 16795.0</h2>
+            <h2 style = "color :black";> MRP : ₹ 16795.0</h2>
             <p>(incl. of all taxes)</p> <br>
             <h3>Select Size:</h3> <br>
              <form name="sizeform"><!-- action="thanks.html" onsubmit="return validate()" -->
