--- a/airmaxSC.html
+++ b/airmaxSC.html
@@ -30,7 +30,7 @@
              </h4>
              <h4 >
                  <a href="#" style="color:#45a29e;text-decoration: none;";
-                >Women</a>
+    >men</a>
              </h4>
              <h4 >
                  <a href="#" style="color:#45a29e;text-decoration: none;">Contact</a>
