--- a/airmaxSC.html
+++ b/airmaxSC.html
@@ -25,12 +25,12 @@
             <a href="#"style="color:#45a29e;text-decoration: none;">Featured</a>
        </h4>
              <h4 >
-                 <a href="#"style="color:#45a29e;text-decoration: none;">Men</a>
+                 <a href="#"style="color:black;text-decoration: none;">Men</a>
             </h4>
              </h4>
              <h4 >
                  <a href="#" style="color:#45a29e;text-decoration: none;";
-    >men</a>
+    </a>
              </h4>
              <h4 >
                  <a href="#" style="color:#45a29e;text-decoration: none;">Contact</a>
