--- a/airmaxSC.html
+++ b/airmaxSC.html
@@ -73,7 +73,7 @@
     <!-- change -->
             <h1>Air Max SC</h1>
             <p><i><h3>Women's Shoes</h3></i></p> <br>
-            <h2 style = "color :#757575";> MRP : ₹ 8775.0</h2>
+            <h2 style = "color :black";> MRP : ₹ 8775.0</h2>
             <p>(incl. of all taxes)</p> <br>
             <h3>Select Size:</h3> <br>
              <form name="sizeform"><!-- action="thanks.html" onsubmit="return validate()" -->
