--- a/airmaxSC.html
+++ b/airmaxSC.html
@@ -71,7 +71,7 @@
        </div>
     <div class="single-pro-details">
     <!-- change -->
-            <h1>Air Max SC</h1>
+            <h1>Air </h1>
             <p><i><h3>Women's Shoes</h3></i></p> <br>
             <h2 style = "color :black";> MRP : ₹ 8775.0</h2>
             <p>(incl. of all taxes)</p> <br>
