--- a/airmaxSC.html
+++ b/airmaxSC.html
@@ -91,7 +91,7 @@
             </div> 
         <span id="dabba">
         <h2><center>
-            Size Chart
+            get lost
         </center></h2>
         <img src="mens_footwear_size_chart 861x343.png">
         <a href="#" onclick ="toggle()">Close</a>
